you can access the API Documentation from the following path: 'base_url/api/documentation'
